--- a/RKEngine.vcxproj.filters
+++ b/RKEngine.vcxproj.filters
@@ -303,6 +303,9 @@
     <ClCompile Include="Engine\PostEffect\DepthTest.cpp">
       <Filter>ソース ファイル\Engine\PostEffect</Filter>
     </ClCompile>
+    <ClCompile Include="Application\DepthTestScene.cpp">
+      <Filter>ソース ファイル\Application</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shader\BasicPS.hlsl">
@@ -621,6 +624,9 @@
     </ClInclude>
     <ClInclude Include="Engine\PostEffect\DepthTest.h">
       <Filter>ヘッダー ファイル\Engine\PostEffect</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\DepthTestScene.h">
+      <Filter>ヘッダー ファイル\Application</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
